<resources>
    <string name="app_name">CollageFinalProject</string>
    <string name="text_accounts">All Accounts</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_category">Enter Category</string>
    <string name="error_message_select_category">Select Category</string>
    <string name="error_message_product_name">Enter product name</string>
    <string name="error_message_product_price">Enter product price</string>
    <string name="error_message_product_desc">Enter product description</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="action_settings">Settings</string>
    <string name="text_hello">Hello,</string>
    <string name="text_title">Android Tutorials Hub</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_home">Home</string>
    <string name="menu_category">Add Category</string>
    <string name="menu_product">Add Product</string>
    <string name="menu_logout">Logout</string>
    <string name="exit_app">Are you sure want to Logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="exit_message">Press again to exit</string>
    <string name="category_name">Category name</string>
    <string name="already_a_member_login">Already a member? Login</string>
    <string name="hint_product_name">Product name</string>
    <string name="hint_product_price">Product Price</string>
    <string name="hint_product_desc">Product Description</string>
    <string name="add_product">Add Product</string>
    <string name="add">Add</string>
    <string name="price_symbol">$ </string>
    <string name="all">All</string>
    <string name="added_cart">Added to cart</string>
    <string name="cart_is_empty">Cart is empty</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="total_price">Total: $ %s </string>
    <string name="next">CheckOut</string>
    <string name="total">Total</string>
    <string name="go_to_home">Go to Home</string>
    <string name="checkout_success">Checkout Success</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>